[workspace]
members = ["p01-hello", "p02-hello", "p03-hello", "p04-hello", "p05-hello", "p06-custombutton", "p07-custombutton", "p08-value-variable", "p09-switch", "p10-custombutton", "p11-custombutton", "p12-eventloop", "p13-eventloop", "p14-eventloop", "p15-eventloop", "p16-eventloop", "p17-eventloop", "p18-eventloop-ashpd", "p19-eventloop-reqwest", "p20-settings", "p21-settings", "p22-custom-window", "p23-list", "p24-list-integer-object", "p25-list-integer-object", "p26-list-expression", "p27-list-filter", "p28-list-stringlist", "p29-composite-template", "p30-composite-template", "p31-composite-template-widget", "p32-composite-template-callback", "p33-composite-template-callback-state", "p34-composite-template-regist", "p35-todo", "p36-actions", "p37-actions-custom", "p38-actions-state", "p39-actions-state-key", "p40-actions-state-ui", "p41-actions-menu", "p42-actions-menu-settings", "p43-todo-menu", "p44-css", "p45-css-text", "p46-css-custom", "p47-css-name", "p48-css-gtk", "p49-css-ui"]


