[package]
name = "p18-eventloop-ashpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = { version = "0.8.1", features = ["gtk4"] }

[dependencies.gtk]
package = "gtk4"
version = "0.8.2"

features = ["v4_12"]