[package]
name = "p52-css-ui-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.gtk]
package = "gtk4"
version = "0.8.2"

features = ["v4_12"]

[build-dependencies]
glib-build-tools = "0.19.0"